[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/blockLarge.glb" type="PackedScene" id=1]
[ext_resource path="res://assets/tree.glb" type="PackedScene" id=2]
[ext_resource path="res://Levels/LevelBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/FinalLevel.gd" type="Script" id=4]
[ext_resource path="res://Objects/Light.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Fonts/TitleFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/PNG/Dark/texture_01.png" type="Texture" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 10, 12, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4.9, 5.7, 1.9 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 4, 5, 1 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 8, 10, 2 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 7 )
uv1_scale = Vector3( 0.25, 0.25, 0.25 )
uv1_offset = Vector3( 0, 0, 0.25 )
uv1_triplanar = true

[sub_resource type="Theme" id=3]
default_font = ExtResource( 6 )

[sub_resource type="Animation" id=4]
resource_name = "DontTurn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("DontTurn/DontTurn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 4.43828 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "DontTurnFlash"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DontTurn/DontTurn:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.866667, 0.396078, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "TooLate"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("DontTurn/TooLate:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FinalLevel" instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="Room" parent="Level" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
width = 8.0
height = 10.0
depth = 64.0

[node name="CutWall" type="CSGBox" parent="Level/Room" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -32 )
operation = 2
width = 20.0
height = 12.0

[node name="StopPlayer" type="StaticBody" parent="Level" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -21 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StopPlayer" index="0"]
shape = SubResource( 1 )

[node name="FakeOutside" type="Spatial" parent="Level" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -22 )

[node name="GrassRow" type="Spatial" parent="Level/FakeOutside" index="0"]

[node name="blockLarge" parent="Level/FakeOutside/GrassRow" index="0" instance=ExtResource( 1 )]
transform = Transform( 30, 0, 0, 0, 1, 0, 0, 0, 20, 25, -7, -40 )

[node name="Trees" type="Spatial" parent="Level/FakeOutside" index="1"]

[node name="Group" type="Spatial" parent="Level/FakeOutside/Trees" index="0"]

[node name="tree" parent="Level/FakeOutside/Trees/Group" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -6, -21.5913 )

[node name="tree2" parent="Level/FakeOutside/Trees/Group" index="1" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5.59402, -6, -19.2381 )

[node name="tree3" parent="Level/FakeOutside/Trees/Group" index="2" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.44568, -6, -26.9129 )

[node name="tree4" parent="Level/FakeOutside/Trees/Group" index="3" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.84301, -6, -17.5971 )

[node name="tree5" parent="Level/FakeOutside/Trees/Group" index="4" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 2.96572, -6, -34.5391 )

[node name="tree6" parent="Level/FakeOutside/Trees/Group" index="5" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 12.0573, -6, -26.7558 )

[node name="Group2" type="Spatial" parent="Level/FakeOutside/Trees" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.35976, 0, -10.109 )

[node name="tree" parent="Level/FakeOutside/Trees/Group2" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -6, -21.5913 )

[node name="tree2" parent="Level/FakeOutside/Trees/Group2" index="1" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5.59402, -6, -19.2381 )

[node name="tree3" parent="Level/FakeOutside/Trees/Group2" index="2" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.44568, -6, -26.9129 )

[node name="tree4" parent="Level/FakeOutside/Trees/Group2" index="3" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.84301, -6, -17.5971 )

[node name="tree5" parent="Level/FakeOutside/Trees/Group2" index="4" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 2.96572, -6, -34.5391 )

[node name="tree6" parent="Level/FakeOutside/Trees/Group2" index="5" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 12.0573, -6, -26.7558 )

[node name="Group3" type="Spatial" parent="Level/FakeOutside/Trees" index="2"]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 6.826, 3, -7.862 )

[node name="tree" parent="Level/FakeOutside/Trees/Group3" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -6, -21.5913 )

[node name="tree2" parent="Level/FakeOutside/Trees/Group3" index="1" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5.59402, -6, -19.2381 )

[node name="tree3" parent="Level/FakeOutside/Trees/Group3" index="2" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.44568, -6, -26.9129 )

[node name="tree4" parent="Level/FakeOutside/Trees/Group3" index="3" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.84301, -6, -17.5971 )

[node name="tree5" parent="Level/FakeOutside/Trees/Group3" index="4" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 2.96572, -6, -34.5391 )

[node name="tree6" parent="Level/FakeOutside/Trees/Group3" index="5" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 12.0573, -6, -26.7558 )

[node name="Group4" type="Spatial" parent="Level/FakeOutside/Trees" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.76627, 0, -2.79129 )

[node name="tree" parent="Level/FakeOutside/Trees/Group4" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -6, -21.5913 )

[node name="tree2" parent="Level/FakeOutside/Trees/Group4" index="1" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5.59402, -6, -19.2381 )

[node name="tree3" parent="Level/FakeOutside/Trees/Group4" index="2" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.44568, -6, -26.9129 )

[node name="tree4" parent="Level/FakeOutside/Trees/Group4" index="3" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.84301, -6, -17.5971 )

[node name="tree5" parent="Level/FakeOutside/Trees/Group4" index="4" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 2.96572, -6, -34.5391 )

[node name="tree6" parent="Level/FakeOutside/Trees/Group4" index="5" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 12.0573, -6, -26.7558 )

[node name="Group5" type="Spatial" parent="Level/FakeOutside/Trees" index="4"]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, 12.407, 3, 4.098 )

[node name="tree" parent="Level/FakeOutside/Trees/Group5" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -6, -21.5913 )

[node name="tree2" parent="Level/FakeOutside/Trees/Group5" index="1" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5.59402, -6, -19.2381 )

[node name="tree3" parent="Level/FakeOutside/Trees/Group5" index="2" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.44568, -6, -26.9129 )

[node name="tree4" parent="Level/FakeOutside/Trees/Group5" index="3" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.84301, -6, -17.5971 )

[node name="tree5" parent="Level/FakeOutside/Trees/Group5" index="4" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 2.96572, -6, -34.5391 )

[node name="tree6" parent="Level/FakeOutside/Trees/Group5" index="5" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 12.0573, -6, -26.7558 )

[node name="Group6" type="Spatial" parent="Level/FakeOutside/Trees" index="5"]
transform = Transform( 1, 0, 0, 0, 1.5, 0, 0, 0, 1, -16.359, 3, -13.301 )

[node name="tree" parent="Level/FakeOutside/Trees/Group6" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -6, -21.5913 )

[node name="tree2" parent="Level/FakeOutside/Trees/Group6" index="1" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 5.59402, -6, -19.2381 )

[node name="tree3" parent="Level/FakeOutside/Trees/Group6" index="2" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -8.44568, -6, -26.9129 )

[node name="tree4" parent="Level/FakeOutside/Trees/Group6" index="3" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -3.84301, -6, -17.5971 )

[node name="tree5" parent="Level/FakeOutside/Trees/Group6" index="4" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 2.96572, -6, -34.5391 )

[node name="tree6" parent="Level/FakeOutside/Trees/Group6" index="5" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 12.0573, -6, -26.7558 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="Level/FakeOutside" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12 )
aabb = AABB( -15, -15, -1, 30, 30, 2 )

[node name="DisappearTrigger" type="Area" parent="Level" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16 )

[node name="CollisionShape" type="CollisionShape" parent="Level/DisappearTrigger" index="0"]
shape = SubResource( 2 )

[node name="ExtraWall" type="StaticBody" parent="Level" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -11 )

[node name="CollisionShape" type="CollisionShape" parent="Level/ExtraWall" index="0"]
shape = SubResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="Level/ExtraWall" index="1"]
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Light" parent="Lights" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, 0 )

[node name="SpotLight" type="SpotLight" parent="Lights" index="2"]
transform = Transform( 0.763368, -0.492515, 0.417969, 0.285028, 0.837469, 0.466267, -0.579679, -0.2368, 0.779678, 27.5999, 14.9194, -25.3154 )
light_color = Color( 0.996078, 0.65098, 0.65098, 1 )
light_energy = 10.461
shadow_enabled = true
spot_range = 173.041
spot_attenuation = 4.28709
spot_angle_attenuation = 0.277392

[node name="Light2" parent="Lights" index="3" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, -8 )

[node name="Light3" parent="Lights" index="4" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, -16 )

[node name="Light4" parent="Lights" index="5" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, -24 )

[node name="Light5" parent="Lights" index="6" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, 8 )

[node name="Light6" parent="Lights" index="7" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, 16 )

[node name="Light7" parent="Lights" index="8" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.85, 24 )

[node name="Door" parent="Barriers" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, -31 )
visible = false
open_default = true

[node name="Player" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 30 )

[node name="DontTurn" type="CenterContainer" parent="HUD" index="3"]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.8
margin_top = -28.5
margin_bottom = 28.5
theme = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DontTurn" type="Label" parent="HUD/DontTurn" index="0"]
margin_left = 220.0
margin_top = 30.0
margin_right = 803.0
margin_bottom = 87.0
text = "Don't turn around."

[node name="TooLate" type="Label" parent="HUD/DontTurn" index="1"]
margin_left = 65.0
margin_right = 958.0
margin_bottom = 117.0
text = "Out of sight, out of mind.
Or was it ever really there?"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD" index="4"]
anims/DontTurn = SubResource( 4 )
anims/DontTurnFlash = SubResource( 5 )
anims/TooLate = SubResource( 6 )

[editable path="Barriers/Door"]
